--- a/css/pc.css
+++ b/css/pc.css
@@ -33,18 +33,20 @@
 
 .window {
     width: 70%;
-    height: 92%;
+    height: 94%;
     margin: auto;
     border: 5px solid white;
     border-radius: 2px;
+    background-image: linear-gradient(to right, #300214, #24000F, #220010);
 }
 
 .barra {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 7%;
+    height: 8%;
     border-bottom: 13px solid white;
+    background-color: black;
     font-family: 'Courier New', Courier, monospace;
     color: white;
 }
@@ -57,19 +59,25 @@
     display: flex;
     align-items: center;
     height: 100%;
+    width: 10%;
 }
 
 .control_default {
     display: flex;
+    align-items: center;
+    height: 90%;
     justify-content: center;
-    width: 3vw;
+    width: 100%;
     background-color: white;
     color: black;
-    height: 85%;
     margin-right: 2px;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
     transition: 0.3s;
+}
+
+.control_default>img {
+    height: 70%;
 }
 
 .control_default:hover {
@@ -77,7 +85,6 @@
 }
 
 .control_default>p {
-    font-size: 64px;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -92,13 +99,34 @@
 
 .display {
     display: flex;
-    height: 93.5%;
-    background-image: linear-gradient(to right, #300214, #24000F, #220010);
+    height: 86%;
+}
+
+.arrows {
+    display: flex;
+    justify-content: space-between;
+    height: 5%;
+    margin-top: 7px;
+}
+
+.arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3vw;
+    height: 100%;
+}
+
+.arrow>img {
+    width: 100%;
+    height: 100%;
 }
 
 .info {
     display: flex;
     flex-direction: column;
+    height: 93%;
+    margin-top: auto;
     justify-content: space-between;
 }
 
@@ -106,7 +134,6 @@
     background-color: black;
     opacity: 0.8;
     margin-left: 0.5vw;
-    height: 45%;
     width: 30vw;
     margin-top: 10vh;
     color: white;
@@ -117,6 +144,7 @@
     font-size: 26px;
     font-weight: bolder;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 10px;
 }
 
 .sprite {
@@ -125,12 +153,19 @@
 }
 
 .sprite>img {
+    height: 100%;
     border: 5px solid #5F1B34;
 }
 
 .personagem {
     margin-left: auto;
     margin-top: auto;
+    height: 93%;
+}
+
+.personagem>img {
+    width: 100%;
+    height: 100%;
 }
 
 
