--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,17 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     overflow-x: hidden;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: black;
 }
 
 nav {
     height: 6vh;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     opacity: 0.5;
 }
@@ -24,5 +26,4 @@ main {
     background-image: url(../img/main.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(255, 255, 255);
 }
