--- a/css/about.css
+++ b/css/about.css
@@ -33,17 +33,38 @@
 
 .structure {
     display: flex;
-    width: 80%;
-    justify-content: space-around;
+    width: 60%;
+    justify-content: space-between;
+}
+
+@media(max-width: 1500px) {
+    .structure {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .default {
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+        width: 55vw;
+    }
 }
 
 .default {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    width: 25vw;
     font-family: 'Courier New', Courier, monospace;
     color: white;
+}
+
+.default>p {
+    text-align: center;
+}
+
+.default>h1 {
+    text-align: center;
 }
 
 .default_img>img {
@@ -52,14 +73,13 @@
 
 .default>h1 {
     font-size: 25px;
-    text-align: center;
     font-weight: bold;
     margin-bottom: 2vh;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .default>p {
+    font-size: clamp(1rem, -0.25rem + 1vw, 2rem);
     line-height: 2.5vh;
-    text-align: justify;
     font-family: 'Courier New', Courier, monospace;
 }
